# rada-tracker

./: .env  Procfile  README.md  laws.json  main.py  pyproject.toml
rada_tracker/: .gitignore  main.py
tests/: test_amnesty_tracker.py
